syntax = "proto3";

package scheduler.v1;

// Go package option for generated code
option go_package = "github.com/HariPrasath-3/scheduler-service/proto/scheduler/v1;schedulev1";

import "proto/common/status.proto";

// SchedulerService exposes APIs to schedule delayed events.
service SchedulerService {
  // Schedule registers a new delayed event.
  rpc Schedule(ScheduleRequest) returns (ScheduleResponse);
  // Cancel removes a previously scheduled event.
  rpc Cancel(CancelRequest) returns (CancelResponse);
}

// ScheduleRequest represents a single delayed event to be scheduled.
message ScheduleRequest {
  // Unique identifier for the event.
  // must be uuid format.
  string event_id = 1;

  // Unix timestamp (seconds) when the event should be executed.
  // Must be strictly greater than current time.
  int64 execute_at = 2;

  // Opaque payload that will be published as-is
  // to downstream systems when the event fires.
  bytes payload = 3;

  // Topic to which the event will be published when it fires.
  string topic = 4;
}

// ScheduleResponse represents the result of a Schedule request.
message ScheduleResponse {
  // Status of the scheduling operation.
  common.Status status = 1;
}

// CancelRequest represents a request to cancel a scheduled event.
message CancelRequest {
  // Unique identifier of the event to be canceled.
  string event_id = 1;
}

// CancelResponse represents the result of a Cancel request.
message CancelResponse {  
  // Status of the cancellation operation.
  common.Status status = 1;
}
